# duden-cli

./: .envrc  .gitignore  .pre-commit-config.yaml  .typos.toml  Deutsch 12 July 2025 00:17:50.apkg  README.md  pixi.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
duden_cli/: anki.py  cli.py  config.py  definition.py
duden_cli/layout/: html.py  rechtschreibung.py
duden_sdk/: cli.py
