[build-system]
requires = ["hatchling >= 1.26"]
build-backen = "hatchling.build"

[project]
name = "duden_cli"
description = "An sdk for Duden API"
authors = [
    { name = "Alexander Ivanov", email = "alexander.valentinov.ivanov@gmail.com" }
]
readme = "README.md"
dynamic = ["version"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"

[project.urls]
repository = "https://github.com/aivanoved/duden_sdk"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["duden_cli"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.docformatter]
black = true # only sets the style options to the default values of black

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = '3.13'
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

explicit_package_bases = true
scripts_are_modules = true
namespace_packages = true

exclude = ["docs/"]

[tool.typos]
# Taken from:
# https://github.com/crate-ci/typos/blob/master/docs/reference.md#example-configurations
default.extend-ignore-re = [
  # Disable spell-checking for an individual line.
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
  # Disable spell-checking for a code block.
  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
]
